--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.11",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
+    "react-csv": "^2.2.2",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-dom-confetti": "^0.2.0",
@@ -23,7 +26,8 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-modal": "^3.16.3",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
